--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,126 +1,63 @@
-name: CI/CD Pipeline
+name: DevSecOps Pipeline
 
 on:
   push:
-    branches: [ main, staging ]
-
-env:
-  DOCKER_USER: "kikyputraa"
-  DOCKER_IMAGE: "kikyputraa/devops-playground"
+    branches: [ "staging", "main" ]
 
 jobs:
-  unit_test:
-    runs-on: self-hosted
+  sast_and_tests:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run Tests
+        with: { fetch-depth: 0 }
+      - name: Unit Test & Coverage
         run: |
-          pip install pytest pytest-cov --break-system-packages
+          pip install pytest pytest-cov bandit
           pytest --cov=app --cov-report=xml tests/
-      - name: Upload Coverage Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage.xml
-
-  sast_bandit:
-    runs-on: self-hosted
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run Bandit
-        run: |
-          pip install bandit --break-system-packages
-          bandit -r app/ || true
-
-  sonarqube_check:
-    needs: unit_test
-    runs-on: self-hosted
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Download Coverage Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: coverage-report
+          bandit -r app/
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=kikyputraa_devops-playground
-            -Dsonar.organization=kikyputraa
-            -Dsonar.branch.name=${{ github.ref_name }}
-            -Dsonar.python.coverage.reportPaths=coverage.xml
-            -Dsonar.sources=app
+      - name: Upload Coverage
+        uses: actions/upload-artifact@v4
+        with: { name: coverage-xml, path: coverage.xml }
 
-  build_job:
-    needs: [sast_bandit, sonarqube_check]
-    runs-on: self-hosted
+  build_and_security:
+    needs: sast_and_tests
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build and Save Image
-        run: |
-          docker build -t ${{ env.DOCKER_IMAGE }}:${{ github.sha }} .
-          docker save ${{ env.DOCKER_IMAGE }}:${{ github.sha }} > app_image.tar
-
-  security_check:
-    needs: build_job
-    runs-on: self-hosted
-    steps:
-      - name: Load Docker image
-        run: docker load < app_image.tar
-      - name: Run Trivy Scan
+      - name: Build Docker Image
+        run: docker build -t kikyputraa/sast-scan-test:${{ github.sha }} .
+      - name: Trivy Scan
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: '${{ env.DOCKER_IMAGE }}:${{ github.sha }}'
+          image-ref: 'kikyputraa/sast-scan-test:${{ github.sha }}'
           format: 'table'
-          exit-code: '0' 
+          exit-code: '1'
           severity: 'CRITICAL,HIGH'
-
-  push_job:
-    needs: security_check
-    runs-on: self-hosted
-    steps:
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ env.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Load and Push Image
+      - name: Push to Docker Hub
         run: |
-          docker load < app_image.tar
-          docker push ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
-          docker tag ${{ env.DOCKER_IMAGE }}:${{ github.sha }} ${{ env.DOCKER_IMAGE }}:latest
-          docker push ${{ env.DOCKER_IMAGE }}:latest
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USER }}" --password-stdin
+          docker push kikyputraa/sast-scan-test:${{ github.sha }}
+          docker tag kikyputraa/sast-scan-test:${{ github.sha }} kikyputraa/sast-scan-test:latest
+          docker push kikyputraa/sast-scan-test:latest
 
-  deploy_job:
-    needs: push_job
-    runs-on: self-hosted
+  deploy_simulation:
+    needs: build_and_security
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Deploy to Kubernetes
+      - name: Update K8s Manifests (Logic 15/01)
         run: |
-          # Logika Namespace dan Port otomatis
-          if [ "${{ github.ref_name }}" == "main" ]; then
-            NAMESPACE="default"
-            PORT="30001"
+          if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+            NAMESPACE="default"; PORT="30001"
           else
-            NAMESPACE="staging"
-            PORT="30002"
+            NAMESPACE="staging"; PORT="30002"
           fi
-
-          # Update Manifest teks (logika 2 hari lalu)
-          sed -i "s|image:.*|image: ${{ env.DOCKER_IMAGE }}:${{ github.sha }}|g" k8s/deployment.yaml
-          sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yaml
-          
-          # Eksekusi Apply ke Cluster (logika hari ini)
-          kubectl apply -f k8s/deployment.yaml -n $NAMESPACE
-          kubectl apply -f k8s/service.yaml -n $NAMESPACE
-          
-          # Force Update Pods
-          kubectl rollout restart deployment flask-app-deployment -n $NAMESPACE
-          
-          echo "🚀 Berhasil deploy ke $NAMESPACE di port $PORT"
+          sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
+          sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
+          sed -i "s|image:.*|image: kikyputraa/sast-scan-test:${{ github.sha }}|g" k8s/deployment.yaml
+          echo "Verified for $NAMESPACE"
