--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,75 +5,53 @@ on:
     branches: [ "staging", "main" ]
 
 jobs:
-  # 1. SAST Bandit
   sast_bandit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run Bandit Scan
-        run: |
-          pip install bandit
-          bandit -r app/
+      - run: pip install bandit && bandit -r app/
 
-  # 2. Unit Testing
   unit_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Run Pytest
-        run: |
+      - run: |
           pip install pytest pytest-cov
           pytest --cov=app --cov-report=xml tests/
-      - name: Upload Coverage Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-xml
-          path: coverage.xml
+      - uses: actions/upload-artifact@v4
+        with: { name: coverage-xml, path: coverage.xml }
 
-  # 3. SonarCloud Check
   sonarqube_check:
     needs: [unit_test]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Download Coverage Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: coverage-xml
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+        with: { fetch-depth: 0 }
+      - uses: actions/download-artifact@v4
+        with: { name: coverage-xml }
+      - uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-  # 4. Build Job
   build_job:
     needs: [sonarqube_check, sast_bandit]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build Docker Image
-        run: |
+      - run: |
           docker build -t kikyputraa/sast-scan-test:${{ github.sha }} .
           docker save kikyputraa/sast-scan-test:${{ github.sha }} > app_image.tar
-      - name: Upload Image Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-image
-          path: app_image.tar
+      - uses: actions/upload-artifact@v4
+        with: { name: app-image, path: app_image.tar }
 
-  # 5. Security Check (Trivy)
-  trivy_scan:
+  security_check:
     needs: [build_job]
     runs-on: ubuntu-latest
     steps:
-      - name: Download Image Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: app-image
-      - name: Load Image and Scan
+      - uses: actions/download-artifact@v4
+        with: { name: app-image }
+      - name: Trivy Scan (Focus on Fixable App Sec)
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'kikyputraa/sast-scan-test:${{ github.sha }}'
@@ -81,32 +59,28 @@ jobs:
           format: 'table'
           exit-code: '1'
           severity: 'CRITICAL,HIGH'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
 
-  # 6. Push Job
   push_job:
-    needs: [trivy_scan]
+    needs: [security_check]
     runs-on: ubuntu-latest
     steps:
-      - name: Download Image Artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: app-image
-      - name: Login and Push to Docker Hub
-        run: |
+      - uses: actions/download-artifact@v4
+        with: { name: app-image }
+      - run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USER }}" --password-stdin
           docker load < app_image.tar
           docker push kikyputraa/sast-scan-test:${{ github.sha }}
           docker tag kikyputraa/sast-scan-test:${{ github.sha }} kikyputraa/sast-scan-test:latest
           docker push kikyputraa/sast-scan-test:latest
 
-  # 7. Deploy Job
   deploy_job:
     needs: [push_job]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Update Manifests Simulation
-        run: |
+      - run: |
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             NAMESPACE="default"; PORT="30001"
           else
@@ -115,4 +89,3 @@ jobs:
           sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
           sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
           sed -i "s|image:.*|image: kikyputraa/sast-scan-test:${{ github.sha }}|g" k8s/deployment.yaml
-          echo "Verified for $NAMESPACE on port $PORT"
