--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,11 +6,9 @@ stages:
   - deploy
 
 variables:
-  DOCKER_USER: "kikyputraa"
   DOCKER_IMAGE: "kikyputraa/sast-scan-test"
   IMAGE_TAG: $CI_COMMIT_SHORT_SHA
 
-# 1. UNIT TESTING & COVERAGE
 unit_test:
   stage: sast
   image: python:3.9-slim
@@ -19,33 +17,22 @@ unit_test:
     - pytest --cov=app --cov-report=xml tests/
   artifacts:
     paths: [coverage.xml]
-    expire_in: 1 hour
 
-# 2. BANDIT SECURITY SCAN
 sast_bandit:
   stage: sast
   image: python:3.9-slim
   script:
     - pip install bandit
     - bandit -r app/
-  allow_failure: true # Diubah ke true agar pipeline tidak mati total jika ada temuan kecil
 
-# 3. SONARCLOUD SCAN
 sonarqube_check:
   stage: sast
   image: { name: sonarsource/sonar-scanner-cli:latest, entrypoint: [""] }
   needs: ["unit_test"]
-  variables:
-    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
-    GIT_DEPTH: "0"
   script:
-    - sonar-scanner 
-      -Dsonar.token=$SONAR_TOKEN 
-      -Dsonar.python.coverage.reportPaths=coverage.xml
-      -Dsonar.qualitygate.wait=false # Ubah ke false agar tidak nunggu status 'Passed' untuk lanjut build
+    - sonar-scanner -Dsonar.token=$SONAR_TOKEN -Dsonar.python.coverage.reportPaths=coverage.xml -Dsonar.qualitygate.wait=false
   allow_failure: true
 
-# 4. BUILD DOCKER IMAGE
 build_job:
   stage: build
   image: docker:24.0.5
@@ -55,18 +42,14 @@ build_job:
     - docker save $DOCKER_IMAGE:$IMAGE_TAG > app_image.tar
   artifacts:
     paths: [app_image.tar]
-    expire_in: 1 hour
 
-# 5. TRIVY CONTAINER SCAN
 trivy_scan:
   stage: security_check
   image: { name: aquasec/trivy:latest, entrypoint: [""] }
   needs: ["build_job"]
   script:
-    - trivy image --input app_image.tar --severity HIGH,CRITICAL --exit-code 1
-  allow_failure: false # Ini tetap false, karena image bahaya TIDAK BOLEH di-push
+    - trivy image --input app_image.tar --severity HIGH,CRITICAL --exit-code 1 --ignore-unfixed
 
-# 6. PUSH TO DOCKER HUB
 push_job:
   stage: push
   image: docker:24.0.5
@@ -80,22 +63,13 @@ push_job:
     - docker tag $DOCKER_IMAGE:$IMAGE_TAG $DOCKER_IMAGE:latest
     - docker push $DOCKER_IMAGE:latest
 
-# 7. DEPLOY SIMULATION
 deploy_job:
   stage: deploy
   image: alpine:latest
   script:
     - apk add --no-cache sed
     - |
-      if [ "$CI_COMMIT_BRANCH" == "main" ]; then
-        NAMESPACE="default"; PORT="30001"
-      else
-        NAMESPACE="staging"; PORT="30002"
-      fi
-      sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/deployment.yaml
-      sed -i "s|namespace:.*|namespace: $NAMESPACE|g" k8s/service.yml
-      sed -i "s|nodePort:.*|nodePort: $PORT|g" k8s/service.yml
+      [[ "$CI_COMMIT_BRANCH" == "main" ]] && (NSP="default"; PT="30001") || (NSP="staging"; PT="30002")
+      sed -i "s|namespace:.*|namespace: $NSP|g" k8s/deployment.yaml
+      sed -i "s|nodePort:.*|nodePort: $PT|g" k8s/service.yml
       sed -i "s|image:.*|image: $DOCKER_IMAGE:$IMAGE_TAG|g" k8s/deployment.yaml
-      echo "Verified Deployment for $NAMESPACE on port $PORT"
-  rules:
-    - if: '$CI_COMMIT_BRANCH == "main" || $CI_COMMIT_BRANCH == "staging"'
