--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ trivy_scan:
   image: { name: aquasec/trivy:latest, entrypoint: [""] }
   needs: ["build_job"]
   script:
-    - trivy image --input app_image.tar --severity HIGH,CRITICAL --exit-code 1 --ignore-unfixed
+    - trivy image --input app_image.tar --severity HIGH,CRITICAL --exit-code 1 --ignore-unfixed --pkg-types library
 
 push_job:
   stage: push
