--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,9 @@
 sonar.projectKey=kikyputraa_devops-playground
 sonar.organization=kikyputraa
-
-# Wajib: kasih tahu Sonar folder kodenya namanya 'app'
 sonar.sources=app
-# Wajib: folder testing namanya 'tests'
 sonar.tests=tests
-
-# Mapping file coverage
 sonar.python.coverage.reportPaths=coverage.xml
-
-# Encoding agar scanner lancar
+sonar.language=py
 sonar.sourceEncoding=UTF-8
+# Mengabaikan file yang tidak perlu dihitung coveragenya
+sonar.exclusions=tests/**, **/requirements.txt
