--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,14 @@
 sonar.projectKey=kikyputraa_devops-playground
 sonar.organization=kikyputraa
+
+# Beritahu Sonar lokasi folder kode relatif terhadap root
 sonar.sources=app
 sonar.tests=tests
+
+# Mapping file coverage (pastikan nama file SAMA PERSIS dengan di pipeline)
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.language=py
+
+# Tambahan: Beritahu Sonar untuk mengabaikan file yang tidak perlu
+sonar.exclusions=**/migrations/**, **/static/**
+sonar.python.version=3
 sonar.sourceEncoding=UTF-8
-# Mengabaikan file yang tidak perlu dihitung coveragenya
-sonar.exclusions=tests/**, **/requirements.txt
