--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,7 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: pip install bandit && bandit -r app/
+      - name: Bandit Security Scan
+        run: |
+          pip install bandit
+          # Menggunakan -ll agar pipeline tidak stop pada isu Medium
+          bandit -r app/ -ll
 
   unit_test:
     runs-on: ubuntu-latest
@@ -31,11 +35,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # Fix Shallow Clone Warning
       - uses: actions/download-artifact@v4
         with:
           name: coverage-report
-      - uses: SonarSource/sonarcloud-github-action@master
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -45,7 +50,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build Image
+      - name: Build & Save Image
         run: |
           docker build -t kikyputraa/devops-playground:${{ github.sha }} .
           docker save kikyputraa/devops-playground:${{ github.sha }} > app_image.tar
@@ -61,7 +66,8 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: docker-artifact
-      - uses: aquasecurity/trivy-action@master
+      - name: Trivy Scan
+        uses: aquasecurity/trivy-action@master
         with:
           input: 'app_image.tar'
           severity: 'CRITICAL,HIGH'
@@ -74,7 +80,8 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: docker-artifact
-      - run: |
+      - name: Push to Docker Hub
+        run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USER }}" --password-stdin
           docker load < app_image.tar
           docker push kikyputraa/devops-playground:${{ github.sha }}
@@ -86,7 +93,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - run: |
+      - name: Update K8s Manifests
+        run: |
           [[ "${{ github.ref }}" == "refs/heads/main" ]] && (NSP="default"; PT="30001") || (NSP="staging"; PT="30002")
           sed -i "s|namespace:.*|namespace: $NSP|g" k8s/deployment.yaml
           sed -i "s|nodePort:.*|nodePort: $PT|g" k8s/service.yaml
