--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,17 +8,15 @@ stages:
 
 variables:
   DOCKER_IMAGE: "kikyputraa/devops-playground"
-  GIT_DEPTH: "0"
+  GIT_DEPTH: "0" # Fix Shallow Clone
 
-# --- STAGE: SAST ---
 sast_bandit:
   stage: sast
   image: python:3.9-slim
   script:
     - pip install bandit
-    - bandit -r app/
+    - bandit -r app/ -ll
 
-# --- STAGE: TEST ---
 unit_test:
   stage: test
   image: python:3.9-slim
@@ -36,7 +34,6 @@ sonarqube_check:
   script:
     - sonar-scanner -Dsonar.token=$SONAR_TOKEN -Dsonar.python.coverage.reportPaths=coverage.xml -Dsonar.python.version=3.9
 
-# --- STAGE: BUILD ---
 build_job:
   stage: build
   image: docker:24.0.5
@@ -47,15 +44,13 @@ build_job:
   artifacts:
     paths: [image.tar]
 
-# --- STAGE: SECURITY ---
 trivy_scan:
   stage: security
   image: { name: aquasec/trivy:latest, entrypoint: [""] }
   needs: [build_job]
   script:
-    - trivy image --input image.tar --severity HIGH,CRITICAL --exit-code 1 --ignore-unfixed
+    - trivy image --input image.tar --severity HIGH,CRITICAL --exit-code 1
 
-# --- STAGE: PUSH ---
 push_job:
   stage: push
   image: docker:24.0.5
@@ -68,7 +63,6 @@ push_job:
     - docker tag $DOCKER_IMAGE:$CI_COMMIT_SHORT_SHA $DOCKER_IMAGE:latest
     - docker push $DOCKER_IMAGE:latest
 
-# --- STAGE: DEPLOY ---
 deploy_job:
   stage: deploy
   image: alpine:latest
