--- a/.trivyignore
+++ b/.trivyignore
@@ -1,1 +1,2 @@
+# Mengabaikan Path Traversal pada jaraco.context karena dependensi sistem yang tidak kritikal untuk aplikasi teks
 GHSA-58pv-8j8x-9vj2
