--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -59,6 +59,7 @@ jobs:
     needs: [build_image]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4 # WAJIB ditambahkan agar file .trivyignore terbaca
       - uses: actions/download-artifact@v4
         with:
           name: docker-artifact
@@ -68,8 +69,7 @@ jobs:
           input: 'app_image.tar'
           severity: 'CRITICAL,HIGH'
           exit-code: '1'
-          ignore-unfixed: true # Melewati celah yang belum ada solusinya
-          vuln-type: 'os,library'
+          ignore-unfixed: true
 
   push_image:
     needs: [container_security]
